exports[`configureStore the store should configure store with given initial state 1`] = `
Object {
  "auth": Object {
    "authToken": "initialToken",
  },
  "column": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "repos": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
}
`;

exports[`configureStore the store should configure store with proper inital state 1`] = `
Object {
  "auth": Object {
    "authtoken": false,
  },
  "column": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
  "repos": Object {
    "data": Object {},
    "error": false,
    "loading": false,
  },
}
`;
